'Page details updated: Cara 1 (item-72a5228c-d0bd-4b96-a124-f64e18dea25a)'

--- a/pages/item-72a5228c-d0bd-4b96-a124-f64e18dea25a/index.html
+++ b/pages/item-72a5228c-d0bd-4b96-a124-f64e18dea25a/index.html
@@ -1,1 +1,4 @@
-<p></p>
+
+<p>Hukum &#8203;Kesenangan</p>
+<p>1. &#8203;Kesenangan &#8203;kalau &#8203;terlalu &#8203;sering &#8203;akan &#8203;bosan</p>
+<p>2. &#8203;</p>
